--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
                     <li v-for="detail in details">{{ detail }}</li>
                 </ul>
 
-                <div v-for="variant in variants" :key="varient.varientID">
+                <div v-for="variant in variants" :key="variant.variantId">
                     <p>{{ variant.variantColor}}</p>
+                </div>
+
+                <button v-on:click="cart += 1">Add to Cart</button>
+                <div class="cart">
+                    <p>Cart({{ cart }})</p>
                 </div>
             </div>        
         </div>
