--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 </ul>
 
                 <div v-for="variant in variants" :key="variant.variantId">
-                    <p>{{ variant.variantColor}}</p>
+                    <p @mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor}}</p>
                 </div>
 
-                <button v-on:click="cart += 1">Add to Cart</button>
+                <button v-on:click="addToCart">Add to Cart</button>
                 <div class="cart">
                     <p>Cart({{ cart }})</p>
                 </div>
