--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
         <div class="nav-bar"></div>
 
         <div id="app">
-        <product></product>  
+            <div class="cart">
+                <p>Cart({{ cart }})</p>
+                </div>
+                <product :premium="premium" @add-to-cart="updateCart"></product>    
+              </div>  
           
     
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="main.js"></script>
 </body>
 </html>
